add start of header/nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <h1>hello world</h1>
+    <div class="container">
+      <nav>
+        <img src="img/logo.png" alt="mt logo" />
+        <span id="work">work</span>
+        <span id="about">about</span>
+        <span id="contact">contact</span>
+      </nav>
+    </div>
   </body>
 </html>
