add header for mobile

--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
     <div class="container">
       <nav>
         <img src="img/logo.png" alt="mt logo" />
-        <span id="work">work</span>
-        <span id="about">about</span>
-        <span id="contact">contact</span>
+        <a href="#work">work</a>
+        <span>//</span>
+        <a href="#about">about</a>
+        <span>//</span>
+        <a href="#contact">contact</a>
       </nav>
+      <header>
+        <img src="img/hello.png" alt="Hello" />
+        <p class="intro">
+          my name is <br> mao thygesen
+        </p>
+        <p class="intro">
+          front end developer
+        </p>
+      </header>
+      <div class="work">
+        <!-- <a name="work"></a> -->
+        <h2>work</h2>
+      </div>
+      <!-- <img src="img/work.png" alt="work" /> -->
     </div>
   </body>
 </html>
