add about section, no info

--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
           front end developer
         </p>
       </header>
-      <div class="work">
-        <!-- <a name="work"></a> -->
+      <div class="heading">
         <h2>work</h2>
+        <p class="work-content">
+            coming soon
+        </p>
+
+      </div>
+      <div class="heading">
+        <h2>about</h2>
+        <p class="about-content">
+            coming soon
+        </p>
+
       </div>
       <!-- <img src="img/work.png" alt="work" /> -->
     </div>
