add contact content along with about

--- a/index.html
+++ b/index.html
@@ -33,10 +33,22 @@
       </div>
       <div class="heading">
         <h2>about</h2>
-        <p class="about-content">
-            coming soon
-        </p>
-
+        <div class="about-content">
+          <p>
+            I am a teacher turned web developer. I have a strong desire to always keep learning, and web development offers the ongoing opportunity of a constant learning environment. I am learning every day and plan on continuing my knowledge.
+          </p>
+          <img src="img/mao.png" alt="Mao" />
+        </div>
+      </div>
+      <div class="heading">
+        <h2>contact</h2>
+        <div class="contact-content">
+          <span id="email">maothygesen@gmail.com</span>
+          <div class="icons">
+            <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
+            <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
+          </div>
+        </div>
       </div>
       <!-- <img src="img/work.png" alt="work" /> -->
     </div>
