--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Mao Thygesen</title>
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
+      <link href='https://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
@@ -39,6 +40,17 @@
           </p>
           <img src="img/mao.png" alt="Mao" />
         </div>
+        <h3>skills</h3>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>JavaScript</li>
+          <ul>
+            <li>Ember.js</li>
+            <li>Angular2</li>
+          </ul>
+          <li></li>
+        </ul>
       </div>
       <div class="heading">
         <h2>contact</h2>
