header to 100vh

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </p>
       </header>
       <div class="heading">
+        <a name="work"></a>
         <h2>work</h2>
         <p class="work-content">
             coming soon
@@ -33,6 +34,7 @@
 
       </div>
       <div class="heading">
+        <a name="about"></a>
         <h2>about</h2>
         <div class="about-content">
           <p>
@@ -40,19 +42,24 @@
           </p>
           <img src="img/mao.png" alt="Mao" />
         </div>
-        <h3>skills</h3>
-        <ul>
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>JavaScript</li>
+        <div class="skills">
+          <h3 id="skills">skills</h3>
           <ul>
-            <li>Ember.js</li>
-            <li>Angular2</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
           </ul>
-          <li></li>
-        </ul>
+            <ul class="js">
+              <li>JavaScript</li>
+              <li>Ember.js</li>
+              <li>Angular2</li>
+              <li>jQuery</li>
+
+            </ul>
+
+        </div>
       </div>
       <div class="heading">
+        <a name="contact"></a>
         <h2>contact</h2>
         <div class="contact-content">
           <span id="email">maothygesen@gmail.com</span>
@@ -62,7 +69,6 @@
           </div>
         </div>
       </div>
-      <!-- <img src="img/work.png" alt="work" /> -->
     </div>
   </body>
 </html>
