add neon light to Hello

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         <a href="#contact">contact</a>
       </nav>
       <header>
-        <img src="img/hello.png" alt="Hello" />
+        <!-- <img src="img/hello.png" alt="Hello" /> -->
+
+        <h1 id="hello">HELLO</h1>
         <p class="intro">
           my name is <br> mao thygesen
         </p>
         <p class="intro">
           front end developer
         </p>
+        <a href="#work"><img src="img/triangle.png" alt="Down Arrow" /></a>
       </header>
       <div class="heading">
         <a name="work"></a>
