add animation to hello

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mao Thygesen</title>
       <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
       <link href='https://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
+      <link rel="icon" href="img/hello.png">
   </head>
   <body>
     <div class="container">
@@ -18,8 +19,11 @@
       </nav>
       <header>
         <!-- <img src="img/hello.png" alt="Hello" /> -->
-
-        <h1 id="hello">HELLO</h1>
+        <div class="neonSign">
+          <h1 id="h">H<h1>
+          <h1 id="hello">ELLO</h1>
+          <h1 id="backgroundText">HELLO</h1>
+        </div>
         <p class="intro">
           my name is <br> mao thygesen
         </p>
@@ -40,12 +44,24 @@
         <a name="about"></a>
         <h2>about</h2>
         <div class="about-content">
+          <img id="mao" src="img/mao.png" alt="Mao" />
           <p>
-            I am a teacher turned web developer. I have a strong desire to always keep learning, and web development offers the ongoing opportunity of a constant learning environment. I am learning every day and plan on continuing my knowledge.
+             I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
           </p>
-          <img src="img/mao.png" alt="Mao" />
+          <h3>When I am not behind the screen I __________.</h3>
+          <ul>
+            <li> + Travel every chance I get.</li>
+            <li> + Explore the other 71% of the Earth.</li>
+            <li> + Eat, cook, bake but mostly eat.</li>
+            <li> + Play with my cats. Uni & Ebi.</li>
+          </ul>
         </div>
-        <div class="skills">
+        <div class="icons">
+          <a href="resume" id="resume">resume</a>
+          <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
+          <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
+        </div>
+        <!-- <div class="skills">
           <h3 id="skills">skills</h3>
           <ul>
             <li>HTML5</li>
@@ -59,17 +75,17 @@
 
             </ul>
 
-        </div>
+        </div> -->
       </div>
       <div class="heading">
         <a name="contact"></a>
         <h2>contact</h2>
         <div class="contact-content">
-          <span id="email">maothygesen@gmail.com</span>
-          <div class="icons">
-            <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
-          </div>
+          <p>
+            Drop me a line! Say Hello!
+          </p>
+          <a href="mailto:maothygesen@gmail.com" id="email">maothygesen@gmail.com</a>
+
         </div>
       </div>
     </div>
