add audio, style Hellow

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <h1 id="h">H<h1>
           <h1 id="hello">ELLO</h1>
           <h1 id="backgroundText">HELLO</h1>
+          <!-- <audio controls autoplay>
+            <source src="img/neonSound.mp3" type="audio/mpeg">
+          </audio> -->
         </div>
         <p class="intro">
           my name is <br> mao thygesen
