--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <h1 id="h">H<h1>
           <h1 id="hello">ELLO</h1>
           <h1 id="backgroundText">HELLO</h1>
-          <!-- <audio controls autoplay>
+          <audio controls autoplay>
             <source src="img/neonSound.mp3" type="audio/mpeg">
-          </audio> -->
+          </audio>
         </div>
         <p class="intro">
           my name is <br> mao thygesen
@@ -58,6 +58,11 @@
             <li> + Eat, cook, bake but mostly eat.</li>
             <li> + Play with my cats. Uni & Ebi.</li>
           </ul>
+        </div>
+        <div class="aboutImages">
+          <img src="img/iceland.png" alt="iceland" />
+          <img id="jump"src="img/jump.gif" alt="bungee jumping" />
+          <img src="img/scuba.png" alt="scuba diving" />
         </div>
         <div class="icons">
           <a href="resume" id="resume">resume</a>
