--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="img/scuba.png" alt="scuba diving" />
         </div>
         <div class="icons">
-          <a href="resume" id="resume">resume</a>
+          <a href="resume.html" id="resume">resume</a>
           <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
           <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
         </div>
