add wide headings to work /contact

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
       </nav>
 
       <div class="resume">
-        <img src="" alt="" />
+        <img id="resume" src="img/CV.jpg" alt="resume" />
       </div>
   </body>
 </html>
