correct contact.png

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div id="contact" class="heading">
         <h2>contact</h2>
         <div class="wide">
-          <img id="contact-image" src="img/contact.png" alt="contact section" />
+          <img id="contact-image" src="img/Contact.png" alt="contact section" />
         </div>
         <div class="contact-content">
           <p>
