change image in about

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span>//</span>
         <a href="#contact">contact</a>
       </nav>
+      <div class="page-content">
       <header>
         <div class="neonSign">
           <h1 id="h">H<h1>
@@ -58,7 +59,7 @@
           <p>
              I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
           </p>
-          <h3>When I am not behind the screen I __________.</h3>
+          <h3>When I am not behind the screen I...</h3>
           <ul>
             <li> + Travel every chance I get.</li>
             <li> + Explore the other 71% of the Earth.</li>
@@ -70,7 +71,7 @@
         <div class="aboutImages">
           <img src="img/iceland.png" alt="iceland" />
           <img id="jump"src="img/jump.gif" alt="bungee jumping" />
-          <img src="img/scuba.png" alt="scuba diving" />
+          <img src="img/cairns2.png" alt="scuba diving" />
         </div>
         <div class="icons">
           <a href="resume.html" id="resume">resume</a>
@@ -108,5 +109,6 @@
         </div>
       </div>
     </div>
+        </div>
   </body>
 </html>
