--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="intro">
           front end developer
         </p>
-        <a href="#work"><img src="img/triangle.png" alt="Down Arrow" /></a>
+        <a href="#work"><img id="triangle" src="img/Triangle3.png" alt="Down Arrow" /></a>
       </header>
 
       <div id="work"class="heading">
@@ -52,14 +52,15 @@
         </div>
       </div>
 
-      <div class="heading">
+      <div id="about"class="heading">
         <a name="about"></a>
-        <h2 id="about">about</h2>
+        <h2 id="about-heading">about</h2>
         <div class="about-content">
           <img id="mao" src="img/mao1.jpg" alt="Mao" />
           <p>
              I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
           </p>
+
           <h3>When I am not behind the screen I...</h3>
           <ul>
             <li> + Travel every chance I get.</li>
@@ -74,11 +75,10 @@
           <img id="jump"src="img/jump.gif" alt="bungee jumping" />
           <img src="img/cairns2.png" alt="scuba diving" />
         </div>
-        <div class="icons">
-          <a href="resume.html" id="resume">resume</a>
-          <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
-          <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
-        </div>
+        <p class="resume">
+          Check out my <a href="resume.html" id="resume">resume</a>.
+        </p>
+
         <!-- <div class="skills">
           <h3 id="skills">skills</h3>
           <ul>
@@ -102,8 +102,12 @@
           <img id="contact-image" src="img/Contact.png" alt="contact section" />
         </div>
         <div class="contact-content">
+          <div class="icons">
+            <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
+            <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
+          </div>
           <p>
-            Drop me a line! Say Hello!
+            Drop me a line!
           </p>
           <a href="mailto:maothygesen@gmail.com" id="email">maothygesen@gmail.com</a>
 
