add paddin to about

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
         </div>
       </div>
 
-      <div id="about"class="heading">
+      <!-- <div id="about"class="heading"> -->
+      <div id="about">
         <a name="about"></a>
-        <h2 id="about-heading">about</h2>
-        <div class="about-content">
+        <div class="top">
+          <h2 id="about-heading">about</h2>
           <img id="mao" src="img/mao1.jpg" alt="Mao" />
+        </div>
+        <div class="about-content">
           <p>
              I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
           </p>
@@ -75,7 +78,7 @@
           <img id="jump"src="img/jump.gif" alt="bungee jumping" />
           <img src="img/cairns2.png" alt="scuba diving" />
         </div>
-        <p class="resume">
+        <p class="about-resume">
           Check out my <a href="resume.html" id="resume">resume</a>.
         </p>
 
