--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img id="work-image" src="img/work.png" alt="work" />
         </div>
         <div class="work-content">
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+          <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
