--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="work-content">
           <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="" /></a>
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+          <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
