add minimized images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div id="work"class="heading">
         <h2>work</h2>
         <div class="wide">
-          <img id="work-image" src="img/work.png" alt="work" />
+          <img id="work-image" src="img/work1.png" alt="work" />
         </div>
         <div class="work-content">
           <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="" /></a>
