--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="img/cairns2.png" alt="scuba diving" />
         </div>
         <p class="about-resume">
-          Check out my <a href="resume.html" id="resume">resume</a>.
+          Check out my <a href="resume.html" id="resume">resume</a>
         </p>
 
         <!-- <div class="skills">
