--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
           <img id="work-image" src="img/work1.png" alt="work" />
         </div>
         <div class="work-content">
-          <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="" /></a>
-          <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="" /></a>
+          <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="taproom app" /></a>
+          <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="hello wild css" /></a>
+          <a href="https://github.com/mthygesen2/JS-Git-Api"><img src="img/git.png" alt="github api app" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+          <!-- <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+          <a href="#"><img src="img/Coming Soon .png" alt="" /></a> -->
         </div>
       </div>
 
