--- a/noble.html
+++ b/noble.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
     <link rel="icon" href="img/hello.png">
+    <script src="js/jquery-1.12.3.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
   <body>
     <div class="container">
