--- a/index.html
+++ b/index.html
@@ -42,19 +42,29 @@
       </header>
 
       <div id="section1"class="heading section">
-        <h2>work</h2>
-        <div class="wide">
-          <img id="work-image" src="img/work1.png" alt="work" />
+        <div class="slide">
+          <h2>work</h2>
+          <div class="wide">
+            <img id="work-image" src="img/work1.png" alt="work" />
+          </div>
         </div>
-        <div class="work-content">
+
+        <div class="work-content slide">
           <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="taproom app" /></a>
+        </div>
+        <div class="work-content slide">
           <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="hello wild css" /></a>
+        </div>
+        <div class="work-content slide">
           <a href="https://github.com/mthygesen2/JS-Git-Api"><img src="img/git.png" alt="github api app" /></a>
+        </div>
+        <div class="work-content slide">
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+        </div>
           <!-- <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a> -->
-        </div>
       </div>
+
 
       <!-- <div id="about"class="heading"> -->
       <div id="section2" class="section">
