add nav color change

--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
         <!-- <a href="#work"><img id="triangle" src="img/Triangle3.png" alt="Down Arrow" /></a> -->
       </header>
 
-      <div id="section1"class="heading section">
-        <div class="slide">
-          <h2>work</h2>
-          <div class="wide">
+      <div id="section1"class="section">
+        <div class="slide work-heading">
             <img id="work-image" src="img/work1.png" alt="work" />
-          </div>
         </div>
 
         <div class="work-content slide">
