--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="icon" href="img/hello.png">
       <script src="js/jquery-1.12.3.js"></script>
       <script src="js/scripts.js"></script>
+      <!-- <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script> -->
       <script type="text/javascript" src="js/jquery.fullPage.js"></script>
   </head>
   <body>
@@ -42,21 +43,37 @@
       </header>
 
       <div id="section1"class="section">
-        <div class="slide work-heading">
+        <div class="work-heading slide">
             <img id="work-image" src="img/work1.png" alt="work" />
         </div>
 
         <div class="work-content slide">
-          <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="taproom app" /></a>
+          <img src="img/Taproom.png" alt="taproom app" />
+          <a href="https://github.com/mthygesen2/JS-Taproom">Tap Room</a>
+          <h2>JavaScript Angular2</h2>
+          <p>
+            An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
+          </p>
         </div>
         <div class="work-content slide">
-          <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="hello wild css" /></a>
+          <img src="img/wild.png" alt="hello wild css" />
+          <a href="http://mthygesen2.github.io/hello-wild/">Hello Wild</a>
+          <h2>CSS / Html</h2>
+          <p>
+            A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
+          </p>
         </div>
         <div class="work-content slide">
-          <a href="https://github.com/mthygesen2/JS-Git-Api"><img src="img/git.png" alt="github api app" /></a>
+          <img src="img/git.png" alt="github api app" />
+
+          <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
+          <p>
+            GitHub Api
+          </p>
         </div>
         <div class="work-content slide">
-          <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
+          <img src="img/Coming Soon .png" alt="" />
+          <a href="#">Coming soon</a>
         </div>
           <!-- <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a> -->
@@ -112,9 +129,9 @@
 
       <div id="section3" class="section heading">
         <h2>contact</h2>
-        <div class="wide">
+        <!-- <div class="wide">
           <img id="contact-image" src="img/Contact.png" alt="contact section" />
-        </div>
+        </div> -->
         <div class="contact-content">
           <div class="icons">
             <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
