--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <img id="work-image" src="img/work1.png" alt="work" />
         </div>
         <div class="work-content">
-          <a href="https://github.com/mthygesen2/JS-Taproom"><img src="img/Taproom.png" alt="" /></a>
-          <a href="http://mthygesen2.github.io/hello-wild/"><img src="img/hello-wild.png" alt="" /></a>
+          <a href="https://github.com/mthygesen2/JS-Taproom" target="_blank"><img src="img/Taproom.png" alt="" /></a>
+          <a href="http://mthygesen2.github.io/hello-wild/" target="_blank"><img src="img/hello-wild.png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
           <a href="#"><img src="img/Coming Soon .png" alt="" /></a>
@@ -106,13 +106,13 @@
         </div>
         <div class="contact-content">
           <div class="icons">
-            <a href="https://github.com/mthygesen2"><img src="img/git1.png" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/maothygesen"><img src="img/in.png" alt="LinkedIn" /></a>
+            <a href="https://github.com/mthygesen2" target="_blank"><img src="img/git1.png" alt="GitHub" /></a>
+            <a href="https://www.linkedin.com/in/maothygesen" target="_blank"><img src="img/in.png" alt="LinkedIn" /></a>
           </div>
           <p>
             Drop me a line!
           </p>
-          <a href="mailto:maothygesen@gmail.com" id="email">maothygesen@gmail.com</a>
+          <a href="mailto:maothygesen@gmail.com" id="email" target="_blank">maothygesen@gmail.com</a>
 
         </div>
       </div>
