change work section to gallery

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <link rel="icon" href="img/hello.png">
       <script src="js/jquery-1.12.3.js"></script>
       <script src="js/scripts.js"></script>
-      <!-- <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script> -->
+  
+      <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
       <script type="text/javascript" src="js/jquery.fullPage.js"></script>
   </head>
   <body>
@@ -43,11 +44,17 @@
       </header>
 
       <div id="section1"class="section">
-        <div class="work-heading slide">
+        <div class="work-heading">
             <img id="work-image" src="img/work1.png" alt="work" />
+            <div class="collage">
+              <img src="img/Taproom.png" width="400" height="300"  alt="Tap Room App" />
+              <img src="img/wild.png"width="400" height="300"  alt="Hello Wild App" />
+              <img src="img/git.png" width="400" height="300" alt="Git Hub App" />
+              <img src="img/Coming Soon .png" width="300" height="300" alt="Coming Soon" />
+            </div>
         </div>
 
-        <div class="work-content slide">
+        <div class="work-content">
           <img src="img/Taproom.png" alt="taproom app" />
           <a href="https://github.com/mthygesen2/JS-Taproom">Tap Room</a>
           <h2>JavaScript Angular2</h2>
@@ -55,7 +62,7 @@
             An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
           </p>
         </div>
-        <div class="work-content slide">
+        <div class="work-content">
           <img src="img/wild.png" alt="hello wild css" />
           <a href="http://mthygesen2.github.io/hello-wild/">Hello Wild</a>
           <h2>CSS / Html</h2>
@@ -63,7 +70,7 @@
             A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
           </p>
         </div>
-        <div class="work-content slide">
+        <div class="work-content">
           <img src="img/git.png" alt="github api app" />
 
           <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
@@ -71,7 +78,7 @@
             GitHub Api
           </p>
         </div>
-        <div class="work-content slide">
+        <div class="work-content">
           <img src="img/Coming Soon .png" alt="" />
           <a href="#">Coming soon</a>
         </div>
