--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p>
             An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
           </p>
-          <span id="back">back</span>
+          <span class="back">back</span>
         </div>
         <div id="wild-info" class="work-content">
           <img src="img/wild.png" alt="hello wild css" />
@@ -69,7 +69,7 @@
           <p>
             A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
           </p>
-          <span id="back">back</span>
+          <span class="back">back</span>
         </div>
         <div id="git-info" draggable=""class="work-content">
           <img src="img/git.png" alt="github api app" />
@@ -78,12 +78,12 @@
           <p>
             GitHub Api
           </p>
-          <span id="back">back</span>
+          <span class="back">back</span>
         </div>
         <div id="soon-info" class="work-content">
           <img src="img/Coming Soon .png" alt="" />
           <a href="#">Coming soon</a>
-          <span id="back">back</span>
+          <span class="back">back</span>
         </div>
       </div>
 
