add some styling to the noble page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="container">
+<!-- NAVBAR -->
       <ul id="menu">
         <img src="img/logo.png" alt="mt logo" />
         <li data-menuanchor="secondPage"><a href="#secondPage">work</a></li>
@@ -24,118 +25,120 @@
         <span>//</span>
         <li data-menuanchor="4thPage"><a href="#4thPage">contact</a></li>
       </ul>
+<!-- NAVBAR ENDS -->
+<!-- FULLPAGE HEADER -->
       <div id="fullpage"class="page-content">
-      <header class="section" id="section0">
-        <div class="neonSign">
-          <h1 id="h">H<h1>
-          <h1 id="hello">ELLO</h1>
-          <h1 id="backgroundText">HELLO</h1>
-          <!-- <audio controls autoplay>
-            <source src="img/neonSound.mp3" type="audio/mpeg">
-          </audio> -->
-        </div>
-        <p class="intro">
-          my name is <br> mao thygesen
-        </p>
-        <p class="intro">
-          front end developer
-        </p>
-        <!-- <a href="#work"><img id="triangle" src="img/Triangle3.png" alt="Down Arrow" /></a> -->
-      </header>
-
-      <div id="section1"class="section">
-        <div class="work-heading">
-            <img id="work-image" src="img/work1.png" alt="work" />
-            <div class="collage">
-              <img id="taproom" src="img/Taproom.png" width="400" height="300"  alt="Tap Room App" />
-              <img id="wild" src="img/wild.png"width="400" height="300"  alt="Hello Wild App" />
-              <img id="git" src="img/git.png" width="400" height="300" alt="Git Hub App" />
-              <img id="soon" src="img/Coming Soon .png" width="300" height="300" alt="Coming Soon" />
-            </div>
-        </div>
-        <div id="taproom-info"class="work-content">
-          <img src="img/Taproom.png" alt="taproom app" />
-          <a href="https://github.com/mthygesen2/JS-Taproom">Tap Room</a>
-          <h2>JavaScript Angular2</h2>
-          <p>
-            An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
-          </p>
-          <span class="back">back</span>
-        </div>
-        <div id="wild-info" class="work-content">
-          <img src="img/wild.png" alt="hello wild css" />
-          <a href="http://mthygesen2.github.io/hello-wild/">Hello Wild</a>
-          <h2>CSS / Html</h2>
-          <p>
-            A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
-          </p>
-          <span class="back">back</span>
-        </div>
-        <div id="git-info" draggable=""class="work-content">
-          <img src="img/git.png" alt="github api app" />
-
-          <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
-          <p>
-            GitHub Api
-          </p>
-          <span class="back">back</span>
-        </div>
-        <div id="soon-info" class="work-content">
-          <img src="img/Coming Soon .png" alt="" />
-          <a href="#">Coming soon</a>
-          <span class="back">back</span>
-        </div>
-      </div>
-
-
-      <div id="section2" class="section">
-        <a name="about"></a>
-        <div class="top">
-          <h2 id="about-heading">about</h2>
-          <img id="mao" src="img/mao1.jpg" alt="Mao" />
-        </div>
-        <div class="about-content">
-          <p>
-             I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
-          </p>
-
-          <h3>When I am not behind the screen I...</h3>
-          <ul>
-            <li> + Travel every chance I get.</li>
-            <li> + Explore the other 71% of the Earth.</li>
-            <li> + Eat, cook, bake but mostly eat.</li>
-            <li> + Play with my cats. Uni & Ebi.</li>
-            <li> + Go on adventures.</li>
-          </ul>
-        </div>
-        <div class="aboutImages">
-          <img src="img/iceland.png" alt="iceland" />
-          <img id="jump"src="img/jump.gif" alt="bungee jumping" />
-          <img src="img/cairns2.png" alt="scuba diving" />
-        </div>
-        <p class="about-resume">
-          Check out my <a href="resume.html" id="resume">resume</a>
-        </p>
-      </div>
-
-      <div id="section3" class="section heading">
-        <h2>contact</h2>
-        <!-- <div class="wide">
-          <img id="contact-image" src="img/Contact.png" alt="contact section" />
-        </div> -->
-        <div class="contact-content">
-          <div class="icons">
-            <a href="https://github.com/mthygesen2" target="_blank"><img src="img/git1.png" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/maothygesen" target="_blank"><img src="img/in.png" alt="LinkedIn" /></a>
+        <header class="section" id="section0">
+          <div class="neonSign">
+            <h1 id="h">H<h1>
+            <h1 id="hello">ELLO</h1>
+            <h1 id="backgroundText">HELLO</h1>
+            <!-- <audio controls autoplay>
+              <source src="img/neonSound.mp3" type="audio/mpeg">
+            </audio> -->
           </div>
-          <p>
-            Drop me a line!
+          <p class="intro">
+            my name is <br> mao thygesen
           </p>
-          <a href="mailto:maothygesen@gmail.com" id="email" target="_blank">maothygesen@gmail.com</a>
+          <p class="intro">
+            front end developer
+          </p>
+        </header>
+<!-- HEADER ENDS -->
+<!-- WORK GALLERY-->
+        <div id="section1"class="section">
+          <div class="work-heading">
+              <img id="work-image" src="img/work1.png" alt="work" />
+              <div class="collage">
+                <img id="taproom" src="img/Taproom.png" width="400" height="300"  alt="Tap Room App" />
+                <img id="wild" src="img/wild.png"width="400" height="300"  alt="Hello Wild App" />
+                <img id="git" src="img/git.png" width="400" height="300" alt="Git Hub App" />
+                <img id="soon" src="img/Coming Soon .png" width="300" height="300" alt="Coming Soon" />
+              </div>
+          </div>
+<!-- WORK GALLERY ENDS -->
+<!-- WORK CONTENT ALL -->
+          <div id="taproom-info"class="work-content">
+            <img src="img/Taproom.png" alt="taproom app" />
+            <a href="https://github.com/mthygesen2/JS-Taproom">Tap Room</a>
+            <h2>JavaScript Angular2</h2>
+            <p>
+              An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
+            </p>
+            <span class="back">back</span>
+          </div>
+          <div id="wild-info" class="work-content">
+            <img src="img/wild.png" alt="hello wild css" />
+            <a href="http://mthygesen2.github.io/hello-wild/">Hello Wild</a>
+            <h2>CSS / Html</h2>
+            <p>
+              A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
+            </p>
+            <span class="back">back</span>
+          </div>
+          <div id="git-info" class="work-content">
+            <img src="img/git.png" alt="github api app" />
 
+            <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
+            <p>
+              GitHub Api
+            </p>
+            <span class="back">back</span>
+          </div>
+          <div id="soon-info" class="work-content">
+            <img src="img/Coming Soon .png" alt="" />
+            <a href="#">Coming soon</a>
+            <span class="back">back</span>
+          </div>
         </div>
+<!-- WORK CONTENT ALL END -->
+<!-- ABOUT -->
+        <div id="section2" class="section">
+          <a name="about"></a>
+          <div class="top">
+            <h2 id="about-heading">about</h2>
+            <img id="mao" src="img/mao1.jpg" alt="Mao" />
+          </div>
+          <div class="about-content">
+            <p>
+               I am a teacher. I am a web developer. But I am always a student. I love constantly learning new things.
+            </p>
+
+            <h3>When I am not behind the screen I...</h3>
+            <ul>
+              <li> + Travel every chance I get.</li>
+              <li> + Explore the other 71% of the Earth.</li>
+              <li> + Eat, cook, bake but mostly eat.</li>
+              <li> + Play with my cats. Uni & Ebi.</li>
+              <li> + Go on adventures.</li>
+            </ul>
+          </div>
+          <div class="aboutImages">
+            <img src="img/iceland.png" alt="iceland" />
+            <img id="jump"src="img/jump.gif" alt="bungee jumping" />
+            <img src="img/cairns2.png" alt="scuba diving" />
+          </div>
+          <p class="about-resume">
+            Check out my <a href="resume.html" id="resume">resume</a>
+          </p>
+        </div>
+<!-- ABOUT END -->
+<!-- CONTACT -->
+        <div id="section3" class="section heading">
+          <h2>contact</h2>
+          <div class="contact-content">
+            <div class="icons">
+              <a href="https://github.com/mthygesen2" target="_blank"><img src="img/git1.png" alt="GitHub" /></a>
+              <a href="https://www.linkedin.com/in/maothygesen" target="_blank"><img src="img/in.png" alt="LinkedIn" /></a>
+            </div>
+            <p>
+              Drop me a line!
+            </p>
+            <a href="mailto:maothygesen@gmail.com" id="email" target="_blank">maothygesen@gmail.com</a>
+          </div>
+        </div>
+<!-- CONTACT END -->
       </div>
     </div>
-        </div>
   </body>
 </html>
