--- a/noble.html
+++ b/noble.html
@@ -12,6 +12,7 @@
 </head>
   <body>
     <div class="container">
+<!-- NAVBAR       -->
       <nav>
         <a href="index.html"><img src="img/logo.png" alt="mt logo" /></a>
         <a href="#work">work</a>
@@ -20,6 +21,7 @@
         <span>//</span>
         <a href="#contact">contact</a>
       </nav>
+<!-- NAVBAR ENDS -->
 
       <div class="noble-study">
         <div class="case-header">
@@ -42,15 +44,16 @@
           </p>
         </div>
         <div class=" noble case-process">
-          <img src="img/noble/CaseStudy1.png" alt="Header with colors" />
+
           <h1>Process</h1>
+          <img src="img/noble/bitter.png" alt="" />
           <p>
             During the discovery process we focused on the primary task of the website. Along with this we talked about the feeling we wanted to envoke when people talked about The Noble Bitter Company. <br>
             The first thing to do was to develop a brand identity. Meeting with the client, he wanted it to be classic but not have a feeling that you were stuck in the past. We came up with the words classically simple.
             Based on this idea, we developed a logo that encaptures it.
             The next step was to create a wireframe where we were able figure out what needed to be highlighted on the main page. And what other things needed to be strongly present.
           </p>
-          <img src="img/noble/CaseStudy.png" alt="" />
+
         </div>
         <div class="noble case-solution">
           <h1>Solution</h1>
